Devops/Kubernetes/k8-16-08-2026/Worker Node/Ingress/netflix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mukeshui-b-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: b.b18g55.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mukeshui-b-service
            port:
              number: 80
